# Scrummy

./: README.md  io.github.wartybix.Scrummy.Devel.json  io.github.wartybix.Scrummy.json  meson.build
data/: io.github.wartybix.Scrummy.desktop.in  io.github.wartybix.Scrummy.gschema.xml  io.github.wartybix.Scrummy.gschema.xml.in  io.github.wartybix.Scrummy.metainfo.xml.in  io.github.wartybix.Scrummy.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: __init__.py.in  ingredient.blp  ingredient.py  ingredient_row.blp  ingredient_row.py  main.py  meal.py  meson.build  move_to_dialog.blp  move_to_dialog.py  new_ingredient_dialog.blp  new_ingredient_dialog.py  new_meal_dialog.blp  new_meal_dialog.py  scrummy.gresource.xml  scrummy.gresource.xml.in  scrummy.in  shared.py  sidebar_section_model.py  window.blp  window.py  window.ui
src/gtk/: style.css
